--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,6 @@
   <meta http-equiv="refresh" content="0; url='https://rdweb.wvd.microsoft.com/arm/webclient/index.html'">
 </head>
 <body>
-  <p> You are being transferred to Azure Virtual Desktop Service<a href="https://rdweb.wvd.microsoft.com/arm/webclient/index.html"></a>.</p>
+  <p> You are being Redirected to Azure Virtual Desktop Service<a href="https://rdweb.wvd.microsoft.com/arm/webclient/index.html"></a>.</p>
 </body>
 </html>
